# road-graph-tool

./: .gitignore  README.md  config-EXAMPLE.ini  config.yml  config_example.yaml  config_example.yml  credentials_config.py  database_operations.py  filter_osm.sh  logging_config.yaml  main.py  manual_compute_strong_components.md  manual_contract_graph_in_area.md  manual_get_area_for_demand.md  manual_get_map_nodes_from_db.md  manual_insert_area.md  manual_select_network_nodes_in_area.md  map.py  performance_test.py  pgtap.md  pgtap_install.ps1  process_osm.sh  pyproject.toml  reference.md  secrets_example.yml
SQL/: README.md  after_import.sql  main.sql  schema_preamble.sql  testing_extension.sql
SQL/Archive/: tables.sql
SQL/functions/: _get_restricted_nodes.sql  function_get_ways_in_target_area.sql  function_insert_area.sql  function_select_node_segments_in_area.sql  function_select_node_segments_in_area_no_speed.sql
SQL/tables/: 04_ways.sql  (+11 more)
doc/: pgtap.md  psql_tests_creation.md  psql_todos_and_qa.md  reference.md
elevation/: README.md  add_elevation-chunk-create-table.py  add_elevation-chunk.py  add_elevation.py  config.json
importer/: README.md  filter.sh  find_bbox.py  process.sh
lua_styles/: simple.lua
notebooks/: overpass.ipynb
performance/: performance_test.py
python/: setup.py
resources/: extract-bbox.geojson  extract-id.geojson
scripts/: main.py  process_osm.py  wipe_road_network.py
tests/: conftest.py  db_setup.py  test_distance_matrix_generator.py  test_filter_osm.py  test_overpass_client.py  test_overpass_import.py  test_process_osm.py
(+156 files in other folders)
